# Cuckoo-GPU

./: .clang-tidy  .gitignore  Doxyfile  HPC_Presentation.odp  LICENSE  README.md  benchmark_results_bucketSize.csv  benchmark_results_total.csv  benchmark_results_truncated.csv  flake.nix  meson.build  meson.options  mogon_jobscript.sh
.github/workflows/: docs.yml
benchmark/: benchmark_common.cuh  bucket_policy_benchmark.cu  cuckoo_atomics_comparison.cu  cuckoo_bucket_size.cu  cuckoo_cpu_vs_gpu.cu  cuckoo_ipc_overhead.cu  cuckoo_single_vs_multi_gpu.cu  cuckoo_sorted_vs_unsorted.cu  cuckoo_vs_bcht.cu  cuckoo_vs_bght.cu  cuckoo_vs_bloom.cu  cuckoo_vs_dynamic_map.cu  cuckoo_vs_gqf.cu  cuckoo_vs_partitioned.cu  cuckoo_vs_tcf.cu  eviction_benchmark.cu  fpr_benchmark.cu  fpr_sweep_benchmark.cu  kmer_benchmark.cu  load_factor_benchmark.cu  load_width_benchmark.cu  meson.build  multi_gpu_scaling_benchmark.cu  profiler_benchmark.cu
benchmarks/: benchmark_common.cuh  benchmark_gqf_common.cuh  bucket_policy_benchmark.cu  compare_cuco.cu  cuckoo_atomics_comparison.cu  cuckoo_cpu_vs_gpu.cu  cuckoo_ipc_overhead.cu  cuckoo_single_vs_multi_gpu.cu  cuckoo_sorted_vs_unsorted.cu  cuckoo_vs_bcht.cu  cuckoo_vs_bloom.cu  cuckoo_vs_dynamic_map.cu  cuckoo_vs_gqf.cu  cuckoo_vs_partitioned.cu  cuckoo_vs_tcf.cu  delete_skew_benchmark.cu  eviction_benchmark.cu  fpr_benchmark.cu  fpr_sweep_benchmark.cu  kmer_benchmark.cu  load_factor_benchmark.cu  load_width_benchmark.cu  meson.build  multi_gpu_scaling_benchmark.cu  profiler_benchmark.cu
examples/: ipc_main.cu  ipc_server_main.cu  main.cu  meson.build  multi_gpu_main.cu
include/: BucketsTableGpu.cuh  CuckooFilter.cuh  CuckooFilterIPC.cuh  CuckooFilterMultiGPU.cuh  bucket_policies.cuh  hash_strategies.cuh  hashutil.cuh  helpers.cuh
include/cuckoogpu/: CuckooFilter.cuh  CuckooFilterIPC.cuh  CuckooFilterMultiGPU.cuh  helpers.cuh
nix/shells/default/: default.nix
scripts/: benchmark_utils.py  compare_filters.py  compute_speedup.py  extract_kmers.sh  mogon_jobscript.sh  ncu_profiler.py  plot.sh  plot_bucket_size.py  plot_bucket_size_scaling.py  plot_cache_benchmark.py  plot_delete_skew.py  plot_eviction.py  plot_fpr.py  plot_fpr_sweep.py  plot_kmer.py  plot_load_factor.py  plot_load_width.py  plot_memory.py  plot_multi_gpu_scaling.py  plot_perf_scaling.py  plot_performance.py  plot_policy.py  plot_runtime.py  plot_scaling.py  plot_sol_benchmark.py  plot_sorted_vs_unsorted.py  plot_throughput.py  plot_utils.py  run_fpr_benchmark.sh  run_fpr_sweep.py  run_load_factor_benchmark.sh  run_load_width_benchmark.py  run_multi_gpu_scaling.py
src/: BucketsTableGpu.cuh  NaiveTable.cuh  benchmark.cu  ipc_main.cu  main.cu  multi_gpu_main.cu
subprojects/: BGHT.wrap  cpu-cuckoo.wrap  cuco.wrap  gossip.wrap  gpu-filters.wrap  gqf.wrap  partitioned-filters.wrap  quotient-filters.wrap  tcf.wrap
subprojects/packagefiles/: cuco_cstdint.patch  quotient-filters.patch
subprojects/packagefiles/bulk-tcf/: CMakeLists.txt
subprojects/packagefiles/bulk-tcf/bulk-tcf/: CMakeLists.txt
subprojects/packagefiles/cpu-cuckoo/: meson.build
subprojects/packagefiles/gossip/: meson.build
subprojects/packagefiles/gpu-filters/: meson.build
subprojects/packagefiles/gpu-filters/gqf/: meson.build
subprojects/packagefiles/gpu-filters/gqf/include/: gqf.cuh  gqf_int.cuh  hashutil.cuh
subprojects/packagefiles/gpu-filters/gqf/src/: gqf.cu  hashutil.cu
subprojects/packagefiles/gqf/: meson.build
subprojects/packagefiles/gqf/include/: gqf_int.cuh  hashutil.cuh
subprojects/packagefiles/gqf/src/: gqf.cu  hashutil.cu
subprojects/packagefiles/kmc/: meson.build
subprojects/packagefiles/partitioned-filters/: fix-libdivide-divider-equality.patch  fix-xor-container-move-constructor.patch
tests/: meson.build  test_cuckoo_filter.cu
