option(
    'benchmarks',
    type: 'feature',
    value: 'auto',
    description: 'Build benchmarks for the library',
)

option(
    'tests',
    type: 'feature',
    value: 'auto',
    description: 'Build tests for the library',
)

option(
    'examples',
    type: 'feature',
    value: 'auto',
    description: 'Build examples for the library',
)